sql/item_sum.h
@@ -1407,6 +1407,11 @@ public:
     return sp_result_field->val_decimal(dec_buf);
   }
 
+  bool val_native(THD *thd, Native *to)
+  {
+    return null_value= execute() || sp_result_field->val_native(to);
+  }
+
   String *val_str(String *str)
   {
     String buf;
